# pysuddendeath

./: .gitignore  .travis.yml  HISTORY.txt  MANIFEST.in  README  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
suddendeath/: __init__.py  __main__.py
tests/: test_init.py  test_message.py
